# cost-optimization-system-for-llms__

./: .gitignore  Dockerfile  Makefile  README.md  ai_model_crawler.py  alembic.ini  anthropicandcoherescraper.py  docker-compose.yml  evaluation.py  open_llm_scraper.py  pyproject.toml  run_scrapers.sh  setup_dev_environment.sh
api/: advanced_comparison.py  apiaggregation.py  optimization_router.py  sql_router.py
app/: main.py
app/db/: db_setup.py
app/db/models/: __init__.py  alert.py  benchmark.py  benchmark_result.py  model.py  model_history.py  model_task.py  model_usage_log.py  pricing.py  project_budget.py  prompt_embedding.py  promptcache.py  provider.py  task.py  user.py  user_project_budget.py
app/migrations/: env.py
app/migrations/versions/: 12348179605b_update_promptcache_table_adding_raw_.py  38ecc7cdf47a_fake_missing_migration.py  77a43a8ec730_create_prompt_cache_table.py  8395b3d8d7b6_recreate_model_usage_log_with_correct_.py  87e8bf98b765_add_user_project_budgets_and_model_.py  8c8dd609ba80_add_promptembedding_and_cost_fields.py  a23abb777e0f_initial_migration.py  c372c6334c5d_change_user_project_budgets_to_use_user_.py  eb8d7e66359c_add_new_feature.py  fa2cec5e128e_add_promptcache_table.py
app/services/: savingdb.py
front/: __init__.py  config.py  dashboard.py  forecasting.py  guide.py  health_check.py  helpers.py  llm_invocation.py  main.py  simulation.py  usage_history.py
nginx/: Dockerfile
nginx/conf.d/: default.conf
tests/: test_advanced_comparaison.py  test_apiaggregation.py  test_helpers.py  test_llms.py  test_opensource_llms.py
